[workspace]
members = ["cl-core", "cl-cli", "cl-gui", "benches"]

[workspace.package]
version = "0.9.3"
edition = "2021"
homepage = "https://github.com/rvigo/cl"
repository = "https://github.com/rvigo/cl"
readme = "README.md"
description = "Group your commands and aliases in an organized and human readable place"

[workspace.dependencies]
anyhow = "1.0.75"
itertools = "0.11.0"
log = "0.4.20"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "sync"] }
cl-core = { path = "cl-core", version = "0.9.2" }

[package]
name = "cl"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
description.workspace = true

[dependencies]
cl-core.workspace = true
cl-cli = { path = "cl-cli", version = "0.1.0" }
cl-gui = { path = "cl-gui", version = "0.1.0" }

anyhow.workspace = true
tokio.workspace = true

[profile.release]
opt-level = 3
strip = "symbols"
lto = "thin"
panic = "abort"

[profile.dev]
panic = "abort"

[profile.bench]
opt-level = 3
strip = "symbols"
lto = "thin"
