[workspace]
members = ["cl-core", "cl-cli", "cl-gui"]

[workspace.package]
version = "0.9.3"
edition = "2021"
homepage = "https://github.com/rvigo/cl"
repository = "https://github.com/rvigo/cl"
readme = "README.md"
description = "Group your commands and aliases in an organized and human readable place"

[workspace.dependencies]
anyhow = "1.0.96"
itertools = "0.13.0"
tracing = "0.1.40"
serde = { version = "1.0.210", features = ["derive"] }
thiserror = "1.0.65"
regex = "1.10.6"
dirs = "5.0.1"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "sync"] }
tempfile = "3.13.0"
cl-core = { path = "cl-core" }

[package]
name = "cl"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
description.workspace = true

[dependencies]
cl-core.workspace = true
cl-cli = { path = "cl-cli" }
cl-gui = { path = "cl-gui" }

anyhow.workspace = true
tokio.workspace = true

[profile.release]
opt-level = 3
strip = "symbols"
lto = "thin"
panic = "abort"

[profile.dev]
panic = "abort"

[profile.bench]
opt-level = 3
strip = "symbols"
lto = "thin"

[dev-dependencies]
cl-core.workspace = true
itertools.workspace = true
criterion = "0.5.1"
rand = "0.8.5"

[[bench]]
name = "core"
path = "benches/core.rs"
harness = false
