[package]
name = "cl-cli"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
cl-core.workspace = true
anyhow.workspace = true
tracing.workspace = true
thiserror.workspace = true
regex.workspace = true
dirs.workspace = true
itertools.workspace = true

clap = { version = "4.5.17", features = ["derive"] }
owo-colors = "3.5.0"
strfmt = "0.2.4"

[dev-dependencies]
tempfile.workspace = true
