[package]
name = "cl-core"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
itertools.workspace = true
tracing.workspace = true
serde.workspace = true
thiserror.workspace = true
regex.workspace = true
dirs.workspace = true

toml = "0.8.19"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile.workspace = true
