[package]
name = "cl-gui"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cl-core.workspace = true

anyhow.workspace = true
copypasta = "0.8.2"
crossterm = "0.25.0"
fuzzy-matcher = "0.3.7"
itertools.workspace = true
log.workspace = true
parking_lot = "0.12.1"
thiserror = "1.0.47"
tokio.workspace = true
tui = { version = "0.19.0", features = ["crossterm"] }
tui-textarea = { version = "0.2.0", features = ["crossterm"] }
