[package]
name = "cl-gui"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
cl-core.workspace = true
anyhow.workspace = true
itertools.workspace = true
log.workspace = true
tokio.workspace = true

copypasta = "0.8.2"
crossterm = "0.27.0"
fuzzy-matcher = "0.3.7"
parking_lot = "0.12.1"
thiserror = "1.0.47"
tui = { package = "ratatui", version= "0.24.0" }
tui-textarea = "0.4.0" 
