[package]
name = "cl-gui"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
cl-core.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["signal", "time"] }

crossterm = { version = "0.28.1", features = ["event-stream"] }
tui = { package = "ratatui", version = "0.29.0" }
unicode-width = "0.2.0"
tokio-stream = { version = "0.1.14" }
copypasta = "0.10.1"
tui-textarea = "0.7.0"
nucleo-matcher = "0.3.1"

[dev-dependencies]
tempfile.workspace = true
