[package]
name = "cl-new-gui"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
cl-core.workspace = true
anyhow.workspace = true
log.workspace = true
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "sync", "signal", "time"] }

crossterm = { version = "0.27.0", features = ["event-stream"] }
tui = { package = "ratatui", version = "0.24.0" }
unicode-width = "0.1"
tokio-stream = { version = "0.1.14" }
downcast-rs = "2.0.1"
async-trait = "0.1.85"

[dev-dependencies]
tempdir.workspace = true
