[package]
name = "cl-new-gui"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
cl-core.workspace = true
anyhow.workspace = true
log.workspace = true
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "sync", "signal", "time"] }

crossterm = { version = "0.28.1", features = ["event-stream"] }
tui = { package = "ratatui", version = "0.29.0" }
unicode-width = "0.2.0"
tokio-stream = { version = "0.1.14" }
async-trait = "0.1.85"
copypasta = "0.10.1"
tui-textarea = "0.7.0"
nucleo-matcher = "0.3.1"

[dev-dependencies]
tempdir.workspace = true
