[package]
name = "cl"
version = "0.9.2"
edition = "2021"
homepage = "https://github.com/rvigo/cl"
repository = "https://github.com/rvigo/cl"
readme = "README.md"
description = "Group your commands and aliases in an organized and human readable place"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cl-core = { path = "../cl-core", version = "0.1.0" }
cl-cli = { path = "../cl-cli", version = "0.1.0" }

anyhow = "1.0.75"
copypasta = "0.8.2"
crossterm = "0.25.0"
fuzzy-matcher = "0.3.7"
itertools = "0.11.0"
log = "0.4.20"
parking_lot = "0.12.1"
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "sync"] }
tui = { version = "0.19.0", features = ["crossterm"] }
tui-textarea = { version = "0.2.0", features = ["crossterm"] }
