[package]
name = "cl"
version = "0.9.2"
edition = "2021"
homepage = "https://github.com/rvigo/cl"
repository = "https://github.com/rvigo/cl"
readme = "README.md"
description = "Group your commands and aliases in an organized and human readable place"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cl-core = { path = "../cl-core", version = "0.1.0" }
cl-cli = { path = "../cl-cli", version = "0.1.0" }
cl-gui = { path = "../cl-gui", version = "0.1.0" }

anyhow = "1.0.75"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "sync"] }
