[package]
name = "cl"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cl-core = { path = "../cl-core", version = "0.9.2" }
cl-cli = { path = "../cl-cli", version = "0.1.0" }
cl-gui = { path = "../cl-gui", version = "0.1.0" }

anyhow.workspace = true
tokio.workspace = true
